[gd_scene load_steps=4 format=3 uid="uid://x6uk6qiiy1be"]

[ext_resource type="Script" path="res://Node Scripts/MultiplayerController.gd" id="1_kvqlo"]
[ext_resource type="PackedScene" uid="uid://bbjhnqqi5yamt" path="res://Player Scenes/player_3d.tscn" id="2_5rdqv"]
[ext_resource type="Script" path="res://Game Scenes/ServerBrowser.gd" id="3_3gmwm"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kvqlo")
playerScene = ExtResource("2_5rdqv")

[node name="Host" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = 36.0
offset_right = 85.5
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
text = "Host
"

[node name="Join" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = 100.0
offset_right = 85.5
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
text = "Join
"

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.29
offset_top = 164.0
offset_right = 85.29
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
text = "Start
"

[node name="userInput" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -28.0
offset_right = 160.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Username"

[node name="ServerBrowser" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_3gmwm")

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Start" to="." method="_on_start_button_down"]
